--- a/src/app/components/tms-sidebar/tms-sidebar-dropdown/tms-sidebar-dropdown.component.scss
+++ b/src/app/components/tms-sidebar/tms-sidebar-dropdown/tms-sidebar-dropdown.component.scss
@@ -29,6 +29,13 @@
     &:hover {
       background-color: $tms-color-sidebar-hover;
     }
+
+    div {
+      width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 }
 
