--- a/src/app/shared/components/tms-date-box/tms-date-box.component.html
+++ b/src/app/shared/components/tms-date-box/tms-date-box.component.html
@@ -14,5 +14,6 @@
     pickerType="calendar"
     type="date"
     displayFormat="dd/MM/yyyy"
+    (onValueChanged)="changeValue($event)"
   ></dx-date-box>
 </div>
