--- a/src/app/shared/components/tms-popup-modal/tms-popup-modal-footer/tms-popup-modal-footer.component.html
+++ b/src/app/shared/components/tms-popup-modal/tms-popup-modal-footer/tms-popup-modal-footer.component.html
@@ -6,6 +6,9 @@
     {{ modalVariables['ButtonTextCancel'] }}
   </div>
 
-  <app-tms-button [buttonText]="modalVariables['ButtonTextConfirm']">
+  <app-tms-button
+    [buttonText]="modalVariables['ButtonTextConfirm']"
+    (click)="submitModal()"
+  >
   </app-tms-button>
 </div>
