--- a/src/app/shared/components/tms-text-area/tms-text-area.component.html
+++ b/src/app/shared/components/tms-text-area/tms-text-area.component.html
@@ -11,5 +11,7 @@
     [placeholder]="inputPlaceholder"
     width="100%"
     [height]="inputHeight"
+    valueChangeEvent="keyup"
+    (onValueChanged)="changeValue($event)"
   ></dx-text-area>
 </div>
