--- a/src/app/shared/components/tms-user-list/tms-user-list.component.scss
+++ b/src/app/shared/components/tms-user-list/tms-user-list.component.scss
@@ -31,6 +31,7 @@
       align-items: center;
       justify-content: center;
       color: $tms-color-white;
+      background-color: $tms-color-user;
       border-radius: 50%;
     }
   }
