Hoan thien chuc nang cap nhat tien do cong viec, chuc nang tim kiem phong ban va du an tren sidebar

--- a/src/app/components/tms-header/tms-header.component.html
+++ b/src/app/components/tms-header/tms-header.component.html
@@ -16,7 +16,7 @@
         routerLink="/dashboard"
       ></div>
     </div>
-    <div>MISA AMIS TMS</div>
+    <div class="tms-header__title" [title]="headerTitle">{{ headerTitle }}</div>
     <div class="tms-header__button-icon setting-container">
       <div class="tms-header__button-icon setting"></div>
     </div>
