--- a/src/app/components/tms-header/tms-header.component.scss
+++ b/src/app/components/tms-header/tms-header.component.scss
@@ -15,6 +15,13 @@
     align-items: center;
   }
 
+  &__title {
+    max-width: 150px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
   &__links {
     display: flex;
     align-items: center;
