--- a/src/app/components/tms-sidebar/tms-sidebar-textbox/tms-sidebar-textbox.component.html
+++ b/src/app/components/tms-sidebar/tms-sidebar-textbox/tms-sidebar-textbox.component.html
@@ -6,6 +6,8 @@
     mode="search"
     stylingMode="underlined"
     [showClearButton]="true"
+    valueChangeEvent="keyup"
+    (onValueChanged)="changeValue($event)"
   ></dx-text-box>
 
   <div class="tms-sidebar-setting"></div>
