--- a/src/app/components/tms-project/tms-project.component.html
+++ b/src/app/components/tms-project/tms-project.component.html
@@ -8,6 +8,7 @@
       *ngIf="router.url.includes('Type=' + projectPages['ProjectGrid'])"
       [gridData]="tasksData"
       [taskColumns]="taskColumns"
+      (onReloadData)="getTasks()"
     ></app-tms-grid>
 
     <app-tms-report
