--- a/src/app/components/tms-popup-modal-project/tms-popup-modal-project.component.html
+++ b/src/app/components/tms-popup-modal-project/tms-popup-modal-project.component.html
@@ -14,6 +14,7 @@
       [selectBoxLabel]="modalProjectVariables['ModalFieldDepartmentLabel']"
       [inputPlaceholder]="modalProjectVariables['ModalFieldDepartmentPlaceholder']"
       [selectBoxData]="departmentOptions"
+      [isRequired]="true"
       selectBoxValueExpression="DepartmentId"
       selectBoxDisplayExpression="DepartmentName"
       [ngStyle]="{width: '50%'}"
@@ -52,7 +53,9 @@
     [bonusButton]="selectMemberButton"
   ></app-tms-text-field>
 
-  <app-tms-user-list></app-tms-user-list>
+  <app-tms-user-list
+    [userList]="memberList"
+  ></app-tms-user-list>
 
   <app-tms-popup-modal-footer
     (onPopupHidden)="hidePopup()"
@@ -67,7 +70,9 @@
   [modalWidth]="popupWidth"
 >
   <app-tms-popup-modal-member
+  [popupVisible]="innerVisible"
     (onPopupHidden)="innerVisible = false"
+    (onModalSubmitted)="renderMembersInfo($event)"
   ></app-tms-popup-modal-member>
 </app-tms-popup-modal>
 
