--- a/src/app/shared/components/tms-select-box/tms-select-box.component.html
+++ b/src/app/shared/components/tms-select-box/tms-select-box.component.html
@@ -3,6 +3,7 @@
 >
   <div class="tms-select-box__label">
     {{ selectBoxLabel }}
+    <span *ngIf="isRequired" class="tms-asterisk">*</span>
   </div>
 
   <dx-select-box
