--- a/src/app/shared/components/tms-user-list/tms-user-list.component.html
+++ b/src/app/shared/components/tms-user-list/tms-user-list.component.html
@@ -1,4 +1,4 @@
-<div class="tms-user-list">
+<div class="tms-user-list" *ngIf="userList.length !== 0">
   <dx-scroll-view
     [scrollByContent]="true"
     [scrollByThumb]="true"
